Git Tests/force-app/main/default/default/objects/StandardSeller__mdt/StandardSeller__mdt.object-meta.xml
<CustomObject>
    <description>Este objeto guarda os ids dos vendedores que recebem cotações não setorizadas.</description>
    <label>Vendedor Padrão</label>
    <pluralLabel>Vendedores Padrão</pluralLabel>
</CustomObject>