Git Tests/force-app/main/default/default/objects/StandardSeller__mdt/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <label>ExternalID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>