Git Tests/force-app/main/default/default/objects/StandardSeller__mdt/fields/VendedorID__c.field-meta.xml
<CustomField>
    <fullName>VendedorID__c</fullName>
    <label>VendedorID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>